css final adicionado

--- a/index.html
+++ b/index.html
@@ -5,29 +5,70 @@
     <head>
         <meta charset="utf-8">
         <title>DW</title>
+        <link rel="stylesheet" href="css/estilos.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
 
     </head>
 
     <body>
+        <img class="logo" src="img/logo.jpg" alt="">
         <h1>Doctor Who</h1>
 
         <h2>Os Doutores</h2>
-        <p></p>
+        <p>Ao todo são, <b>14</b> encarnações, <b>7</b> da era classica e <b>7</b> da era moderna.</p>
+        <img class="doutor" src="img/doutores1.jpg" alt="">
 
         <h2>Viagem pelo Espaço-tempo</h2>
 
-        <p>Doctor Who segue as aventuras de um renegado Senhor do Tempo do planeta Gallifrey que simplesmente atende pelo nome de "Doutor". Ele fugiu de seu planeta natal em uma TARDIS,tipo 40 - o que lhe permite viajar através do tempo e espaço. Devido a um mau funcionamento do "circuito camaleão" da TARDIS, que normalmente permite que a TARDIS possa assumir a aparência de objetos locais para disfarçar-se, a TARDIS do Doutor permanece fixa como uma cabine telefônica policial britânica</p>
+        <p>Doctor Who segue as aventuras de um renegado Senhor do Tempo do planeta Gallifrey que simplesmente atende pelo nome de "Doutor". Ele fugiu de seu planeta natal em uma TARDIS,tipo 40 - o que lhe permite viajar através do tempo e espaço. Devido a um mau funcionamento do "circuito camaleão" da TARDIS, que normalmente permite que a TARDIS possa assumir a aparência de objetos locais para disfarçar-se, a TARDIS do Doutor permanece fixa como uma cabine telefônica policial britânica.</p>
 
         <h3>The T.A.R.D.I.S</h3>
 
-        <P>Abreviação para "Time and Relative Dimensions in Space" em português "Tempo e Dimensões Relativas no Espaço</P>
+        <P>Abreviação para <b>"Time and Relative Dimensions in Space"</b> em português <b>"Tempo e Dimensões Relativas no Espaço".</b> </P>
 
-        <img src="img/tardis.jpg" alt="">
+        <img class="tardis" src="img/tardis.jpg" alt="" width="1000px" height="550px">
 
         <h3>Maior por Dentro</h3>
         <p>Uma das principais características da TARDIS é que o interior existe em uma dimensão diferente da do exterior, fazendo com que seja "maior por dentro do que por fora" (bigger on the inside).</p>
 
-        <img src="img/tardis2.jpg" alt="">
+        <img class="tardis" src="img/tardis2.jpg" alt="">
+
+        <h3>Principais vilões</h3>
+        
+        <ol>
+            <li>Daleks</li>
+            <img class="viloes" src="img/daleks.jfif" alt="">
+
+            <li>The Master</li>
+            <img class="viloes" src="img/master2.jfif" alt="">
+
+            <li>Cyberman</li>
+            <img class="viloes" src="img/cybermen.jpg" alt="">
+
+            <li>Davros</li>
+            <img class="viloes" src="img/davros.jpg" alt="">
+
+            <li>Weeping Angels (Anjos Lamentadores)</li>
+            <img class="viloes" src="img/anjo.jfif" alt="">
+
+            <li>Vashta Nerada</li>
+            <img class="viloes" src="img/vashtajpg.jpg" alt="">
+
+            <li>The Beast (A Besta)</li>
+            <img class="viloes" src="img/beast.jfif" alt="">
+
+            <li>Zygons</li>
+            <img class="viloes" src="img/zygons.jpg" alt="">
+
+            <li>Silêncio</li>
+            <img class="viloes" src="img/silence.jfif" alt="">
+        </ol>
+
+        <hr>
+
+        <p>&copy; Desenvolvido por: <b>Mateus Santos</b></p>
 
     </body>
 
